# ROSFOXY

./: README.md
yolo_py/: 4.move_image.py  5.move_labels.py  6.yolov8_obj_det_ak(1).ipynb  image_label_checker.py
yolov8/: package.xml  setup.py
yolov8/yolov8/: camera.py  yolo_publisher.py
